<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/artist_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:elevation="2dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:layout_marginBottom="1dp"
    android:layout_margin="2dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardElevation="3dp"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



        <RelativeLayout
            android:id="@+id/container_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >


            <ImageView
                android:id="@+id/imgIsOffline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/presence_online"
                android:contentDescription="@string/text_offline_movies" />

            <TextView
                android:layout_toEndOf="@id/imgIsOffline"
                android:id="@+id/textIsOffline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_below="@id/imgIsOffline"
                android:id="@+id/lbl_name_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/artist_name"
                />

            <TextView
                android:layout_below="@id/imgIsOffline"
                android:id="@+id/name_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_toEndOf="@+id/lbl_name_artist"
                android:paddingStart="@dimen/appbar_padding_top"
                tools:text="@string/text_title"
                />




            <TextView
                android:id="@+id/lbl_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/name_artist"
                android:text="@string/url"
                android:textColor="@color/colorGreyLight" />

            <TextView
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/id_mbid"
                android:layout_toEndOf="@+id/lbl_url"
                android:paddingStart="@dimen/appbar_padding_top"
                tools:text="@string/text_sub_title"
                android:autoLink="web"
                android:textColor="@android:color/holo_red_light" />

            <TextView
                android:id="@+id/lbl_id_mbid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_url"
                android:maxLines="1"
                android:text="@string/mbid"
                android:textColor="@color/colorGreyLight" />

            <TextView
                android:id="@+id/id_mbid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/poster_path"
                android:layout_toEndOf="@+id/lbl_id_mbid"
                android:maxLines="1"
                android:text="@string/mbid"
                android:textColor="@color/colorGreyLight" />

            <ImageView
                android:id="@+id/poster_path"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/thumbnail_height"
                android:layout_below="@+id/lbl_id_mbid"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/artist" />


        </RelativeLayout>

</android.support.v7.widget.CardView>